1. Fixed incorrect text alignment on Darkening index page. 2. Added the new table of contents and some instructions to the Darkening story template. 3. Created Martin Isitt's Across the Night Wall in the Darkening. 4. Added page title, metadata, and upper headers. 5. Found a bigger version of the infrared Japp-NASA Milky Way illo with better credit info. Used it for the header. Linked to astrophotographer Carol Japp's Fine Arts America page and home page.

--- a/css/darkening.scss
+++ b/css/darkening.scss
@@ -244,7 +244,7 @@ ol.toc a {
     color: $phosphor-greener;
 }
 
-/* section.table-of-contents {
+section.table-of-contents {
     max-width: $main-content-width;
     margin-left: auto;
     margin-right: auto;
@@ -256,7 +256,8 @@ ol.toc a {
 
 .table-of-contents p {
     text-align: center;
-} */
+}
+
 img.greater-separator {
     max-width: $native-separator-width;
     width: 100%;
